# ObjectDetector

./: Dockerfile  README.md
client/: CMakeLists.txt  aux.cpp  aux.h  config.yaml  main.cpp
client/tests/: CMakeLists.txt  client_tests.cpp  test_config.yaml
common/: intersection.h  point.h  poly.cpp  poly.h  vbox.h
doc/: Doxyfile
doc/html/: annotated.html  aux_8h_source.html  classNNEngine-members.html  classNNEngine.html  classObjectFinderService-members.html  classObjectFinderService.html  classObjectFinderService__coll__graph.dot  classObjectFinderService__coll__graph.map  classObjectFinderService__coll__graph.md5  classPolygon-members.html  classPolygon.html  classes.html  dir_41e1742e44e2de38b3bc91f993fed282.html  dir_bdd9a5d540de89e9fe90efdfc6973a4f.html  dir_db3a54907829b36871118d03417739cd.html  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.dot  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.dot  inherit_graph_3.dot  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.dot  inherit_graph_4.map  inherit_graph_4.md5  inherit_graph_5.dot  inherits.html  intersection_8h_source.html  nnengine_8h_source.html  point_8h_source.html  poly_8h_source.html  (+9 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  searchdata.js
grpc/: ObjectFinder.grpc.pb.cc  ObjectFinder.grpc.pb.h  ObjectFinder.pb.cc  ObjectFinder.pb.h  ObjectFinder.proto  script.txt
server/: CMakeLists.txt  main.cpp  nnengine.cpp  nnengine.h  service.cpp  service.h  utils.cpp  utils.h
server/tests/: CMakeLists.txt  server_tests.cpp
